--- a/src/fine_tuning_and_optimization.ipynb
+++ b/src/fine_tuning_and_optimization.ipynb
@@ -68,15 +68,12 @@
    },
    "outputs": [],
    "source": [
-    "import os\n",
-    "import json\n",
     "from dataclasses import dataclass\n",
     "from typing import Dict, List, Union, Optional\n",
     "\n",
     "import torch\n",
-    "import torchaudio\n",
     "import numpy as np\n",
-    "from datasets import Dataset, DatasetDict, Features, Sequence, Value, load_dataset\n",
+    "from datasets import DatasetDict, Features, Sequence, Value\n",
     "from transformers import (\n",
     "    Wav2Vec2CTCTokenizer,\n",
     "    Wav2Vec2FeatureExtractor,\n",
@@ -85,7 +82,6 @@
     "    TrainingArguments,\n",
     "    Trainer,\n",
     ")\n",
-    "import jiwer\n",
     "import logging\n",
     "from abc import ABC, abstractmethod\n",
     "\n",
@@ -445,17 +441,7 @@
   {
    "cell_type": "code",
    "source": [
-    "import os\n",
-    "import torch\n",
-    "import numpy as np\n",
-    "from transformers import Wav2Vec2ForCTC, Wav2Vec2Processor\n",
-    "from datasets import load_dataset\n",
     "import torchaudio\n",
-    "import jiwer\n",
-    "import json\n",
-    "import time\n",
-    "from pathlib import Path\n",
-    "\n",
     "\n",
     "def evaluate_transcription(model, processor, dataset, num_samples=10, device=\"cpu\"):\n",
     "    \"\"\"Evaluate a model on transcription quality.\"\"\"\n",
@@ -756,19 +742,14 @@
    },
    "outputs": [],
    "source": [
-    "import os\n",
     "import torch\n",
-    "import numpy as np\n",
     "import json\n",
     "import logging\n",
     "import time\n",
     "from tqdm import tqdm\n",
-    "from datetime import datetime\n",
     "from transformers import (\n",
-    "    Wav2Vec2ForCTC,\n",
     "    Wav2Vec2Processor,\n",
     "    Wav2Vec2Config,\n",
-    "    get_linear_schedule_with_warmup\n",
     ")\n",
     "from torch.optim.lr_scheduler import OneCycleLR\n",
     "from datasets import load_dataset\n",
@@ -1736,11 +1717,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import sys\n",
     "import torch\n",
-    "import psutil\n",
     "import numpy as np\n",
-    "from transformers import Wav2Vec2ForCTC, Wav2Vec2Processor\n",
     "from prettytable import PrettyTable\n",
     "\n",
     "def get_directory_size(path):\n",
